--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Vue Box-shadows v0.0.3</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Vue Box-shadows v1.0.0</title>
   </head>
   <body>
     <div id="app">
-      Vue.js wrapper for box-shadow.css to build simple and awesome shadows with use vue.
+      Collection of CSS box-shadows for every taste contains more than 100
+      simple, beautiful and airy shadows.
     </div>
   </body>
 </html>
